--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <div style="min-width: 330px;">
-      <app-solicitations (messageEvent)="receiveMessage($event)"></app-solicitations>
+      <app-solicitations></app-solicitations>
   </div>
   <div style="width: 100%">
       <app-informations></app-informations>
